--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "version": "1.0.0",
   "author": "Sonam Chhogyel <schyles@gmail.com>",
   "dependencies": {
+    "autoprefixer": "^9.1.5",
     "emotion": "^9.2.10",
     "emotion-server": "^9.2.10",
     "gatsby": "^2.0.0",
     "gatsby-plugin-emotion": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-postcss": "^2.0.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
+    "precss": "^3.1.2",
+    "purgecss-webpack-plugin": "^1.3.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-emotion": "^9.2.10",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
+    "tailwindcss": "^0.6.6",
     "typography": "^0.16.17",
     "typography-theme-kirkham": "^0.16.3"
   },
