--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "gatsby-plugin-postcss": "^2.0.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-prismjs": "^3.0.1",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "precss": "^3.1.2",
+    "prismjs": "^1.15.0",
     "purgecss-webpack-plugin": "^1.3.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
