--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "emotion": "^9.2.10",
     "emotion-server": "^9.2.10",
     "gatsby": "^2.0.0",
+    "gatsby-cli": "^2.4.3",
     "gatsby-plugin-emotion": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
